Add support for opening screens, plates, plate acquisitions, and wells

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -269,6 +269,7 @@ ImageOpener.opening = Ouverture de {0} en cours...
 ImageOpener.fetchingInformation = Récupération d'informations sur {0}...
 ImageOpener.imageOpening = Ouverture des images
 ImageOpener.errorWhileRetrievingImage = Erreur lors de la récupération des images contenues dans {0}. Consultez les logs pour plus d'informations.
+ImageOpener.noImageFound = Aucune image n'a été trouvée dans {0}.
 
 Entities.Annotation.Comment.title = Commentaires
 Entities.Annotation.File.title = Pièces jointes
