Add image parent information in advanced search

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -196,7 +196,7 @@ Browser.ServerBrowser.AdvancedSearch.import = Importer
 Browser.ServerBrowser.AdvancedSearch.importObjects = Importer des objets OMERO
 Browser.ServerBrowser.AdvancedSearch.query = Requête
 Browser.ServerBrowser.AdvancedSearch.queryLabel = Requête:
-Browser.ServerBrowser.AdvancedSearch.restrictBy = Restreindre par:
+Browser.ServerBrowser.AdvancedSearch.restrictBy = Restreindre par :
 Browser.ServerBrowser.AdvancedSearch.name = Nom
 Browser.ServerBrowser.AdvancedSearch.description = Description
 Browser.ServerBrowser.AdvancedSearch.searchFor = Rechercher:
@@ -217,6 +217,12 @@ Browser.ServerBrowser.AdvancedSearch.acquired = Acquis
 Browser.ServerBrowser.AdvancedSearch.imported = Importé
 Browser.ServerBrowser.AdvancedSearch.group = Groupe
 Browser.ServerBrowser.AdvancedSearch.link = Lien
+Browser.ServerBrowser.AdvancedSearch.parentProject = Projet parent
+Browser.ServerBrowser.AdvancedSearch.parentDataset = Dataset parent
+Browser.ServerBrowser.AdvancedSearch.parentScreen = Screen parent
+Browser.ServerBrowser.AdvancedSearch.parentPlate = Plate parent
+Browser.ServerBrowser.AdvancedSearch.parentPlateAcquisition = Run parent
+Browser.ServerBrowser.AdvancedSearch.parentWell = Well parent
 
 Browser.ServerBrowser.AdvancedSearch.TypeCellFactory.couldNotRetrieveIcon = Impossible de récupérer l'icône
 
