--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -118,6 +118,18 @@ DataTransporters.KeyValuesSender.gettingExistingNamespaces = Obtention des espac
 DataTransporters.KeyValuesSender.keyValuesSent = Les paires clé-valeur ont bien été envoyées vers le serveur.
 DataTransporters.KeyValuesSender.keyValuesNotSent = Les paires clé-valeur n'ont pas été envoyées vers le serveur.\nAvez-vous les droits suffisants ?
 
+SampleScriptMenu.sampleScripts = Exemples de scripts
+SampleScriptMenu.openServer = Ouvrir un serveur
+SampleScriptMenu.openImagesOfProject = Ouvrir les images du projet actuel
+SampleScriptMenu.openImageFromCommandLine = Ouvrir une image à partir de la ligne de commande
+SampleScriptMenu.sendAnnotations = Envoyer des annotations
+SampleScriptMenu.sendMeasurements = Envoyer des mesures
+SampleScriptMenu.sendKVP = Envoyer des paires clé-valeur
+SampleScriptMenu.sendImageSettings = Envoyer les paramètres de l'image
+SampleScriptMenu.importAnnotations = Importer des annotations
+SampleScriptMenu.importKVP = Importer des paires clé-valeur
+SampleScriptMenu.importImageSettings = Importer les paramètres d'image
+
 Browser.BrowseMenu.browseServer = Parcourir le serveur...
 Browser.BrowseMenu.newServer = Nouveau serveur...
 
