Change default port of pixel buffer micro-service to 443

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -185,7 +185,7 @@ Browser.ServerBrowser.Settings.iceAPIServerPort = Port du serveur
 Browser.ServerBrowser.Settings.iceAPIServerPortDescription = Le port de l'instance omero.server (ICE) (qui peut être différent de l'instance omero.web). Ce paramètre ne doit être spécifié que si l'importation d'une image avec l'Ice API ne fonctionne pas.
 Browser.ServerBrowser.Settings.msPixelBufferAPI = API microservice Pixel Buffer
 Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Port du serveur
-Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer (8082 par défaut).
+Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer. La valeur par défaut (443) revient à ne spécifier aucun port du tout.
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Annuler
 Browser.ServerBrowser.Settings.error = Erreur
