Add setting to set the number of readers of the ICE API

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -183,6 +183,8 @@ Browser.ServerBrowser.Settings.iceAPIServerAddress = Adresse du serveur
 Browser.ServerBrowser.Settings.iceAPIServerAddressDescription = L'adresse de l'instance omero.server (ICE) (qui peut être différente de l'instance omero.web). Ce paramètre ne doit être spécifié que si l'importation d'une image avec l'Ice API ne fonctionne pas.
 Browser.ServerBrowser.Settings.iceAPIServerPort = Port du serveur
 Browser.ServerBrowser.Settings.iceAPIServerPortDescription = Le port de l'instance omero.server (ICE) (qui peut être différent de l'instance omero.web). Ce paramètre ne doit être spécifié que si l'importation d'une image avec l'Ice API ne fonctionne pas.
+Browser.ServerBrowser.Settings.iceAPINumberParallelReaders = Nombre de lecteurs parallèles ICE
+Browser.ServerBrowser.Settings.iceAPINumberParallelReadersDescription = Le nombre de lecteurs ICE parallèles utilisés lors de la lecture d'une image.\nUne valeur élevée va généralement accélérer la lecture d'une image, mais cela peut également surcharger le serveur OMERO (surtout s'il tourne sur une machine peu performante).\nN'utilisez une valeur élevée que si vous êtes certain que le serveur OMERO peut la supporter.
 Browser.ServerBrowser.Settings.msPixelBufferAPI = API microservice Pixel Buffer
 Browser.ServerBrowser.Settings.msPixelBufferAPIPort = Port du serveur
 Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serveur OMERO utilisé par le microservice Pixel Buffer. La valeur par défaut (443) revient à ne spécifier aucun port du tout.
@@ -191,6 +193,7 @@ Browser.ServerBrowser.Settings.cancel = Annuler
 Browser.ServerBrowser.Settings.error = Erreur
 Browser.ServerBrowser.Settings.invalidJpegQuality = Qualité JPEG non valide.
 Browser.ServerBrowser.Settings.iceServerPort = Port du serveur ICE non valide.
+Browser.ServerBrowser.Settings.iceNumberOfReaders = Nombre de lecteurs incorrect.
 Browser.ServerBrowser.Settings.invalidPixelBufferMicroservicePort = Port du microservice Pixel Buffer non valide.
 Browser.ServerBrowser.Settings.saved = Paramètres enregistrés
 Browser.ServerBrowser.Settings.parametersSaved = Les paramètres ont bien été enregistrés.
