Adapt strings resources

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -1,5 +1,5 @@
-Utils.connectionError = Erreur de connexion
-Utils.connectionClosed = La connexion à {0} a été interrompue en raison d'un échec de ping vers le serveur. Consultez les logs pour plus d'informations.
+UiUtils.connectionError = Erreur de connexion
+UiUtils.connectionClosed = La connexion à {0} a été interrompue en raison d'un échec de ping vers le serveur. Consultez les logs pour plus d'informations.
 
 Extension.name = OMERO extension
 Extension.description = Ajoute la possibilité de parcourir un serveur OMERO et d'ouvrir les images hébergées dessus.
@@ -151,7 +151,6 @@ Browser.ServerBrowser.noAccessRawPixels = Pas d'accès aux valeurs brutes des pi
 Browser.ServerBrowser.settings = Paramètres
 Browser.ServerBrowser.loadingEntities = Chargement d'entitées en cours...
 Browser.ServerBrowser.entitiesLoadedBackground = Des entités sont chargées en arrière-plan...
-Browser.ServerBrowser.orphanedImagesLoadedBackground = Les images orphelines sont chargées en arrière-plan...
 Browser.ServerBrowser.loadingThumbnails = Chargement des miniatures...
 Browser.ServerBrowser.thumbnailsLoadedBackground = Des miniatures sont chargées en arrière-plan...
 Browser.ServerBrowser.moreInfo = Plus d'informations...
@@ -168,7 +167,6 @@ Browser.ServerBrowser.value = Valeur
 Browser.ServerBrowser.copyURIToClipboard = Copier l'URL dans le presse-papiers
 Browser.ServerBrowser.uriSuccessfullyCopied = URI copiée dans le presse-papiers.
 Browser.ServerBrowser.itemNeedsSelected = L'élément doit d'abord être sélectionné !
-Browser.ServerBrowser.loadingOrphanedImages = Chargement d'images orphelines
 Browser.ServerBrowser.noElementSelected = Aucun élément sélectionné
 Browser.ServerBrowser.multipleElementsSelected = Plusieurs éléments sélectionnés
 Browser.ServerBrowser.cantDisplayInformation = Impossible d'afficher les informations d'un object
@@ -296,12 +294,6 @@ ImageOpener.fetchingInformation = Récupération d'informations sur {0}...
 ImageOpener.imageOpening = Ouverture des images
 ImageOpener.errorWhileRetrievingImage = Erreur lors de la récupération des images contenues dans {0}. Consultez les logs pour plus d'informations.
 ImageOpener.noImageFound = Aucune image n'a été trouvée dans {0}.
-
-Entities.Annotation.Comment.title = Commentaires
-Entities.Annotation.File.title = Pièces jointes
-Entities.Annotation.Map.title = Paires clé-valeur
-Entities.Annotation.Rating.title = Notes
-Entities.Annotation.Tag.title = Mots clés
 
 Entities.Image.name = Nom
 Entities.Image.id = Id
