Use owner ID and name in annotation importer

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -15,7 +15,6 @@ DataTransporters.Forms.ImageSettings.channelColors =  Couleur des canaux
 DataTransporters.Forms.ImageSettings.channelDisplayRanges = Plages d'affichage des canaux
 
 DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom = Importer les annotations de
-DataTransporters.Forms.ImportAnnotations.all = Tous
 DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations = Supprimer les annotations QuPath actuelles
 DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections = Supprimer les détections QuPath actuelles
 
@@ -358,4 +357,4 @@ Entities.RepositoryEntities.Server.server = Serveur
 
 Entities.Permissions.Group.allGroups = Tous les groupes
 
-Entities.Permissions.Owner.allMembers = Tous les membres
+Entities.Permissions.Experimenter.allExperimenters = Tous les membres
