Normalize entities requests

--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -133,6 +133,8 @@ Browser.BrowseMenu.browseServer = Parcourir le serveur...
 Browser.BrowseMenu.newServer = Nouveau serveur...
 
 Browser.BrowserCommand.gatheringInformation = Récupération d'informations sur {0}...
+Browser.BrowserCommand.omeroError = OMERO erreur
+Browser.BrowserCommand.cannotGetServerInformation = Impossible de récupérer les informations de {0}
 
 Browser.ServerBrowser.omeroBrowser = Navigateur OMERO
 Browser.ServerBrowser.server = Serveur:
@@ -294,62 +296,29 @@ ImageOpener.imageOpening = Ouverture des images
 ImageOpener.errorWhileRetrievingImage = Erreur lors de la récupération des images contenues dans {0}. Consultez les logs pour plus d'informations.
 ImageOpener.noImageFound = Aucune image n'a été trouvée dans {0}.
 
-Entities.Image.name = Nom
-Entities.Image.id = Id
-Entities.Image.owner = Propriétaire
-Entities.Image.group = Groupe
-Entities.Image.acquisitionDate = Date d'acquisition
-Entities.Image.imageWidth = Largeur de l'image
-Entities.Image.imageHeight = Hauteur de l'image
-Entities.Image.uncompressedSize = Taille (non compressée)
-Entities.Image.nbChannels = Nb de canaux
-Entities.Image.nbZSlices = Nb de tranches z
-Entities.Image.nbTimePoints = Nb de points de temps
-Entities.Image.pixelSizeX = Taille des pixels X
-Entities.Image.pixelSizeY = Taille des pixels Y
-Entities.Image.pixelSizeZ = Taille des pixels Z
-Entities.Image.pixelType = Type de pixels
-
-Entities.Dataset.name = Nom
-Entities.Dataset.id = Id
-Entities.Dataset.description = Description
-Entities.Dataset.owner = Propriétaire
-Entities.Dataset.group = Groupe
-Entities.Dataset.nbImages = Nb d'images
-
-Entities.Project.name = Nom
-Entities.Project.id = Id
-Entities.Project.description = Description
-Entities.Project.owner = Propriétaire
-Entities.Project.group = Groupe
-Entities.Project.nbDatasets = Nb de datasets
-
-Entities.Well.name = Nom
-Entities.Well.id = Id
-Entities.Well.owner = Propriétaire
-Entities.Well.group = Groupe
-Entities.Well.column = Colonne
-Entities.Well.row = Ligne
-
-Entities.PlateAcquisition.name = Nom
-Entities.PlateAcquisition.id = Id
-Entities.PlateAcquisition.owner = Propriétaire
-Entities.PlateAcquisition.group = Groupe
-Entities.PlateAcquisition.acquisitionTime = Date d'acquisition
-
-Entities.Plate.name = Nom
-Entities.Plate.id = Id
-Entities.Plate.owner = Propriétaire
-Entities.Plate.group = Groupe
-Entities.Plate.columns = Colonnes
-Entities.Plate.rows = Lignes
-
-Entities.Screen.name = Nom
-Entities.Screen.id = Id
-Entities.Screen.description = Description
-Entities.Screen.owner = Propriétaire
-Entities.Screen.group = Groupe
-Entities.Screen.nbPlates = Nb de plates
+Entities.name = Nom
+Entities.id = Id
+Entities.description = Description
+Entities.owner = Propriétaire
+Entities.group = Groupe
+Entities.nbImages = Nb d'images
+Entities.acquisitionDate = Date d'acquisition
+Entities.uncompressedSize = Taille (non compressée)
+Entities.imageWidth = Largeur de l'image
+Entities.imageHeight = Hauteur de l'image
+Entities.nbChannels = Nb de canaux
+Entities.nbZSlices = Nb de tranches z
+Entities.nbTimePoints = Nb de points de temps
+Entities.pixelSizeX = Taille des pixels X
+Entities.pixelSizeY = Taille des pixels Y
+Entities.pixelSizeZ = Taille des pixels Z
+Entities.pixelType = Type de pixels
+Entities.columns = Colonnes
+Entities.rows = Lignes
+Entities.nbDatasets = Nb de datasets
+Entities.nbPlates = Nb de plates
+Entities.column = Colonne
+Entities.row = Ligne
 
 Entities.RepositoryEntities.OrphanedFolder.orphanedImages = Images orphelines
 
