--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -174,6 +174,9 @@ Browser.ServerBrowser.cantDisplayInformation = Impossible d'afficher les informa
 Browser.ServerBrowser.errorWhenFetchingInformation = Erreur lors de la récupération des informations de {0}: {1}
 
 Browser.ServerBrowser.Settings.title = Paramètres
+Browser.ServerBrowser.Settings.allAPI = Toutes les APIs
+Browser.ServerBrowser.Settings.maximalBodySize = Taille maximale du corps des requêtes (MB)
+Browser.ServerBrowser.Settings.maximalBodySizeDescription = Taille maximale, en mégaoctets (Mo), du corps d'une requête lors de l'envoi d'une requête web à l'une des API. Ce paramètre n'est pas pris en compte pour toutes les requêtes. Ce paramètre a été ajouté car, par défaut, le serveur web OMERO n'accepte pas les corps de requête dont la taille est supérieure au paramètre Django DATA_UPLOAD_MAX_MEMORY_SIZE (2,62144 Mo par défaut).
 Browser.ServerBrowser.Settings.webAPI = API web
 Browser.ServerBrowser.Settings.webAPIJpegQuality = Qualité JPEG
 Browser.ServerBrowser.Settings.webAPIJpegQualityDescription = La qualité JPEG utilisée par la Web pixel API (de 0 à 1, 0.9 par défaut).
@@ -190,6 +193,7 @@ Browser.ServerBrowser.Settings.msPixelBufferAPIPortDescription = Le port du serv
 Browser.ServerBrowser.Settings.ok = OK
 Browser.ServerBrowser.Settings.cancel = Annuler
 Browser.ServerBrowser.Settings.error = Erreur
+Browser.ServerBrowser.Settings.invalidMaxBodySize = Taille maximale du corps des requêtes non valide.
 Browser.ServerBrowser.Settings.invalidJpegQuality = Qualité JPEG non valide.
 Browser.ServerBrowser.Settings.iceServerPort = Port du serveur ICE non valide.
 Browser.ServerBrowser.Settings.iceNumberOfReaders = Nombre de lecteurs incorrect.
