--- a/src/main/resources/qupath/ext/omero/strings_fr.properties
+++ b/src/main/resources/qupath/ext/omero/strings_fr.properties
@@ -296,6 +296,7 @@ Login.WaitingWindow.cancel = Annuler
 
 ImageOpener.opening = Ouverture de {0} en cours...
 ImageOpener.fetchingInformation = Récupération d'informations sur {0}...
+ImageOpener.open = Ouvertures des
 ImageOpener.imageOpening = Ouverture des images
 ImageOpener.errorWhileRetrievingImage = Erreur lors de la récupération des images contenues dans {0}. Consultez les logs pour plus d'informations.
 ImageOpener.noImageFound = Aucune image n'a été trouvée dans {0}.
